5/13 비만, 우울증 func 추가 및 버그 수정